--- a/sites/all/modules/migrate/CHANGELOG.txt
+++ b/sites/all/modules/migrate/CHANGELOG.txt
@@ -2,13 +2,81 @@
 Next release
 ============
 
+Features and enhancements
+- #1670410 - Sanity-check migration machine names.
+- #1637458 - Pass field instance rather than just field name to field() methods.
+- #1688312 - Allow any file field argument to have per-instance values.
+- #1701764 - Add prepareKey() method to customize source keys.
+- #1703050 - Add track_last_imported option for maps.
+- #1690092 - Protect migrations, or specific rows, from rollback.
+- #1672572 - Stifle mapping override messages.
+- #1621608 - Support for splitting files on import.
+- #1637292 - Support case-sensitive matching on term reference fields.
+- #1647594 - Add information message on unmatched terms.
+- #1621906 - Support DESTINATION system-of-records for menu links.
+
+Bug fixes
+- #1712434 - Highwater fails when highwater field values == 0.
+- #1708296 - Handle timestamps before 1902.
+- #1637444 - Don't offer format subfield for plain text fields.
+- #1700678 - Only show path as a destination where applicable.
+- #1693304 - Role import results not reported.
+- #1676652 - Fix preserve_files issues with file destination, MigrateFilFid,
+             FILE_EXISTS_REUSE cases.
+- #1679798 - Remove remote file import, for reliability of simpletests.
+- #1619822 - Cleanup drush subprocess handling.
+- #1635184 - Properly NULL csvHandle when closing.
+- #1630544 - Fix FILE_EXISTS_REUSE to actually reuse existing file entities.
+- #1618466 - Fix picture notice when updating users.
+- #1615682 - Fix to CSV record counting.
+
+Migrate 2.4
+===========
+
 IMPORTANT: The file migration support (both MigrateDestinationFile and
-the file field handler) has been completely refactored for this release - if you
+the file field handler) has been completely refactored since Migrate 2.3 - if you
 are importing files as part of your migration, you MUST change your migrations
 to properly use the new implementation. See http://drupal.org/node/1540106 for
 details on how to use the new handlers and destination.
 
 Features and enhancements
+- #1685122 - Add previous source field name to notice.
+- #1692912 - Add vocabulary name to notice.
+- #1606586 - Add activeUrl public method to MigrateSourceXML.
+
+Bug fixes
+- #1680878 - Fix rollback through UI.
+- #1693492 - Map table query not using right connection.
+- #1614318 - MigrateFileUri failed to pass file object through.
+- #1601974 - Remove percent sign fix-up, leave to particular application.
+- #1600912 - Base constructor was undermining UI override of displayFunction.
+- #1595056 - Handle empty arguments from migrate_status table.
+- #1595166 - Support multiple source keys in MigrateList.
+
+Migrate 2.4 Release Candidate 1
+===============================
+
+Features and enhancements
+- #1587842 - Remove sample CSV files from migrate project.
+- #1152878 - drush migrate-analyze command, for source data analysis.
+- #1587566 - Support escape option for CSV sources on PHP 5.3.
+- #1189328 - UI option to ignore dependencies.
+- #1016452 - Support migrating user role assignments by name.
+- #653636 - Add migrate-messages command to dump message table.
+
+Bug fixes
+- #919108 - Cleaner error-handling when updating destinations that don't exist.
+- #1574502 - Coder review, remove dead code.
+- #1570536 - Undefined property in term.inc.
+
+Migrate 2.4 Beta 1
+==================
+
+Features and enhancements
+- #1428166 - Make message columns sortable.
+- #1459888 - Removed deprecated source count(), showMessage(), setOutputFunction().
+- #1528916 - Link field descriptions to drupal.org documentation.
+- #722686  - Support for node statistics.
 - #1299646 - Enforce dependencies on rollback.
 - #1328408 - Support --group on drush migrate-status.
 - #1402822 - Cleaner handling of exceptions from source plugins.
@@ -18,6 +86,11 @@ Features and enhancements
 - #1350284 - Visually group migrations by group in drush.
 
 Bug fixes
+- #1569612 - skip_empty should only skip NULL values.
+- #1561448 - Proper handling of is_new for users.
+- #1205278 - Don't multiply-increment usage counts when preserving files; remove
+             file_usages on uninstall.
+- #1438282 - Handle errors thrown when getting counts.
 - #1358318 - Fix dedupe() overdeduping on --update.
 - #1538046 - Give highwater marks a chance at preparation before using them.
 - #1408248 - Handle errors in complete() cleanly.
@@ -28,7 +101,7 @@ Bug fixes
 - #1538508 - Fix notice when mapping parent_name.
 - #1537352 - Check limits and status before next().
 - #1540120 - Zero not working as defaultValue.
-- #1508654 - MigrateSourceQL needs to respect join aliases.
+- #1508654 - MigrateSourceSQL needs to respect join aliases.
 - #1518076 - UI side of subfield handling.
 - #1480762 - Fix cross-database joins to map table.
 - #1520688 - setDisplayFunction needs to be static.
